@@ -1,4 +1,8 @@
 2007-02-17  Jim Lynch <jim@jam.sessionsnet.org>
+	* fixed some places where Tcl_AppendResult didn't have NULL as their
+	last parameter
+
+2007-02-17  Jim Lynch <jim@jam.sessionsnet.org>
 	* factor:
 	we want to add the PQexec result status code to a string, so 
 	we will use a Tcl_DString which is a dynamic string. So, create
